--- a/pankeeki/src/css/style.css
+++ b/pankeeki/src/css/style.css
@@ -55,7 +55,7 @@ button {
 /* General Wrapper Styles */
 .wrapper {
   margin: 0 auto;
-  margin-bottom: 4rem;
+  /* margin-bottom: 4rem; */
 }
 
 /* General Block Styles */
