--- a/pankeeki/src/css/style.css
+++ b/pankeeki/src/css/style.css
@@ -25,6 +25,7 @@ button {
   outline: none;
   cursor: pointer;
   border: none;
+  background-color: white;
 }
 
 button[disabled] {
@@ -55,7 +56,7 @@ button {
 /* General Wrapper Styles */
 .wrapper {
   margin: 0 auto;
-  /* margin-bottom: 4rem; */
+  margin-bottom: 4rem;
 }
 
 /* General Block Styles */
