Fix responsive styling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,6 +69,7 @@ button {
   border-radius: 0.35rem;
   border: 7px solid #31549e;
   letter-spacing: 1px;
+  box-sizing: border-box;
 }
 
 .block > * {
